Migrated to SvelteKit Demo

--- a/html/pages/article-template.html
+++ b/html/pages/article-template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Article Title - Company Hub</title>
+    <title>Article Title - Tech Central</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/article.css" />
     <link
@@ -18,7 +18,7 @@
         <button>FR</button>
       </div>
       <nav>
-        <div class="logo">Company Hub</div>
+        <div class="logo">Tech Central</div>
         <ul class="nav-links">
           <li><a href="../index.html">Home</a></li>
           <li><a href="learning-hub.html">Learning Hub</a></li>
@@ -625,7 +625,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-section">
-          <h4>Company Hub</h4>
+          <h4>Tech Central</h4>
           <p>Your centralized portal for all company resources</p>
         </div>
         <div class="footer-section">
@@ -647,7 +647,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 Company Hub. All rights reserved.</p>
+        <p>&copy; 2023 Tech Central. All rights reserved.</p>
       </div>
     </footer>
 
