--- a/html/pages/search-results.html
+++ b/html/pages/search-results.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search Results - Company Hub</title>
+    <title>Search Results - Tech Central</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/search.css" />
     <link
@@ -81,7 +81,7 @@
         </div>
       </div>
       <nav>
-        <div class="logo">Company Hub</div>
+        <div class="logo">Tech Central</div>
         <button class="mobile-menu-btn">
           <i class="fas fa-bars"></i>
         </button>
@@ -974,7 +974,7 @@
                 <div class="filter-options">
                   <div class="filter-option">
                     <input type="checkbox" id="filter-techhub" checked />
-                    <label for="filter-techhub">Company Hub</label>
+                    <label for="filter-techhub">Tech Central</label>
                   </div>
                   <div class="filter-option">
                     <input type="checkbox" id="filter-onesource" />
@@ -1130,7 +1130,7 @@
                     <span class="result-tag">Residential</span>
                   </div>
                   <div class="result-metadata">
-                    <span class="result-source">Company Hub</span>
+                    <span class="result-source">Tech Central</span>
                     <span class="result-date">Updated May 30, 2023</span>
                     <span class="result-views"
                       ><i class="fas fa-eye"></i> 2,548 views</span
@@ -1247,7 +1247,7 @@
                     <span class="result-tag">Fiber</span>
                   </div>
                   <div class="result-metadata">
-                    <span class="result-source">Company Hub</span>
+                    <span class="result-source">Tech Central</span>
                     <span class="result-date">Updated June 5, 2023</span>
                   </div>
                 </div>
@@ -1281,7 +1281,7 @@
                     <span class="result-tag">Installation</span>
                   </div>
                   <div class="result-metadata">
-                    <span class="result-source">Company Hub</span>
+                    <span class="result-source">Tech Central</span>
                     <span class="result-date">Updated May 22, 2023</span>
                   </div>
                 </div>
@@ -1547,7 +1547,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-section">
-          <h4>Company Hub</h4>
+          <h4>Tech Central</h4>
           <p>Your centralized portal for all company resources</p>
         </div>
         <div class="footer-section">
@@ -1569,7 +1569,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 Company Hub. All rights reserved.</p>
+        <p>&copy; 2023 Tech Central. All rights reserved.</p>
       </div>
     </footer>
 
