--- a/html/pages/training.html
+++ b/html/pages/training.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Training Hub - Company Hub</title>
+    <title>Training Hub - Tech Central</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/training.css" />
     <link
@@ -81,7 +81,7 @@
         </div>
       </div>
       <nav>
-        <div class="logo">Company Hub</div>
+        <div class="logo">Tech Central</div>
         <button class="mobile-menu-btn">
           <i class="fas fa-bars"></i>
         </button>
@@ -270,7 +270,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-section">
-          <h4>Company Hub</h4>
+          <h4>Tech Central</h4>
           <p>Your centralized portal for all company resources</p>
         </div>
         <div class="footer-section">
@@ -292,7 +292,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 Company Hub. All rights reserved.</p>
+        <p>&copy; 2023 Tech Central. All rights reserved.</p>
       </div>
     </footer>
 
