--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Company Hub</title>
+    <title>Tech Central</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
@@ -70,7 +70,7 @@
         </div>
       </div>
       <nav>
-        <div class="logo">Company Hub</div>
+        <div class="logo">Tech Central</div>
         <button class="mobile-menu-btn">
           <i class="fas fa-bars"></i>
         </button>
@@ -172,7 +172,7 @@
       </div>
 
       <section class="hero">
-        <h1>Welcome to the Company Hub</h1>
+        <h1>Welcome to Tech Central</h1>
         <p>Your centralized portal for all company resources and information</p>
         <div class="hero-buttons">
           <a href="pages/article-template.html" class="hero-btn primary-btn">
@@ -705,7 +705,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-section">
-          <h4>Company Hub</h4>
+          <h4>Tech Central</h4>
           <p>Your centralized portal for all company resources</p>
         </div>
         <div class="footer-section">
@@ -727,7 +727,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 Company Hub. All rights reserved.</p>
+        <p>&copy; 2023 Tech Central. All rights reserved.</p>
       </div>
     </footer>
 
