--- a/html/pages/learning-hub.html
+++ b/html/pages/learning-hub.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Learning Hub - Company Hub</title>
+    <title>Learning Hub - Tech Central</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/learning-hub.css" />
     <link rel="stylesheet" href="../css/tooltips.css" />
@@ -72,7 +72,7 @@
         </div>
       </div>
       <nav>
-        <div class="logo">Company Hub</div>
+        <div class="logo">Tech Central</div>
         <button class="mobile-menu-btn">
           <i class="fas fa-bars"></i>
         </button>
@@ -1200,7 +1200,7 @@
     <footer>
       <div class="footer-content">
         <div class="footer-section">
-          <h4>Company Hub</h4>
+          <h4>Tech Central</h4>
           <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact Support</a></li>
@@ -1227,7 +1227,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 Company Name. All rights reserved.</p>
+        <p>&copy; 2023 Tech Central. All rights reserved.</p>
       </div>
     </footer>
 
